Code updated | all alignment fixed

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ html {
 }
 
 .location {
-  margin-top: -10rem;
+  margin-top: 2rem;
   text-align: center;
   font-weight: 800;
   font-size: 3rem;
@@ -155,14 +155,14 @@ html {
   color: #57606f;
 }
 #weathercon {
-  height: 55%;
+  height: 35%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3em;
 }
 
-#weathercon .fas {
+#weathercon .fa-sun-o {
   font-size: 6rem;
   animation: fas-anime 3s linear infinite alternate;
 }
